added footer and images

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,7 +15,7 @@
     --orange: #FFA500;
     --white: #FFFFFF;
     --lightgray: #F5F5F5;
-    --darkblue: #3F51B5;
+    --darkblue: #143d8e;
     --pink: #FF4081;
     --darkgray: #333333;
     --gray: #c2c2c2;
