added seoo tags, toast for contact form

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,8 @@
     --darkgray: #333333;
     --gray: #c2c2c2;
     --dark: #5c5c5c;
+    --red: #f44336;
+    --green: #4caf50;
 }
 
 body, html {
